--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
 #busy {
     color: aqua;
 }
+
+#img-container {
+    display: flex;
+    justify-content: center;
+}
+
+#img-container img{
+    height: 244px;
+    margin: 0 20px;
+    border: solid 2px;
+    border-radius: 5%;
+    /* box-shadow: 0 4px 2px -2px rgba(89, 91, 119) */
+
+}
