--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,23 @@
+#header {
+    text-align: center;
+    background-color: rgb(152, 152, 253);
+}
+
 #busy {
     color: aqua;
+}
+
+#nav ul {
+    padding: 19px;
+    text-align: center;
+}
+
+#nav-text li {
+    /* size: 10em; */
+    display: inline;
+    margin: 0 0 55px 0;
+    
+
 }
 
 #img-container {
@@ -13,5 +31,4 @@
     border: solid 2px;
     border-radius: 5%;
     /* box-shadow: 0 4px 2px -2px rgba(89, 91, 119) */
-
 }
