--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@
     color: aqua;
 }
 
+#nav {
+    margin: 20px;
+}
 #nav ul {
     padding: 19px;
     text-align: center;
@@ -30,5 +33,5 @@
     margin: 0 20px;
     border: solid 2px;
     border-radius: 5%;
-    /* box-shadow: 0 4px 2px -2px rgba(89, 91, 119) */
+    box-shadow: 0 6px 2px -2px rgba(89, 91, 119);
 }
