--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,21 @@
+body {
+    background: url('../img/portland_bus_background.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 #header {
     text-align: center;
     background-color: rgb(152, 152, 253);
+    opacity: 0.82;
+    
 }
 
 #busy {
-    color: aqua;
+    color: #94C4E5;
+
 }
 
 #nav {
@@ -16,11 +27,8 @@
 }
 
 #nav-text li {
-    /* size: 10em; */
     display: inline;
     margin: 0 0 55px 0;
-    
-
 }
 
 #img-container {
@@ -28,10 +36,14 @@
     justify-content: center;
 }
 
-#img-container img{
+#img-container img {
     height: 244px;
     margin: 0 20px;
     border: solid 2px;
     border-radius: 5%;
     box-shadow: 0 6px 2px -2px rgba(89, 91, 119);
+}
+
+#chartContainer {
+    opacity: 0.82;
 }
